fix(#79):스토어_응답_요청_엔티티_수정